fix sidebar visibility on mobile

--- a/user/themes/imaginarious/scss/template-customized.scss
+++ b/user/themes/imaginarious/scss/template-customized.scss
@@ -183,6 +183,10 @@ iframe.animatedLogotype {
   background: rgba(0,0,0,0.5) !important;
 }
 
+.sb-slidebar {
+  background-color: transparent !important;
+}
+
 #defaultCanvas0 {
   position: fixed;
   top: 0;
